infra/cert/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: hello-world
        ports:
        - containerPort: 8080
