infra/cert/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging-cluste-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - hello.zeah.software
    secretName: hello-world-tls
  rules:
  - host: hello.zeah.software
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
